--- a/frontend/src/Search/Book/AddNewBookSearchResult.css
+++ b/frontend/src/Search/Book/AddNewBookSearchResult.css
@@ -34,22 +34,35 @@
 
 .content {
   flex: 0 1 100%;
+  overflow: hidden;
 }
 
-.name {
+.titleRow {
   display: flex;
+}
+
+.titleContainer {
+  display: flex;
+  align-items: flex-end;
+  flex: 0 1 auto;
+}
+
+.title {
   font-weight: 300;
   font-size: 36px;
-}
-
-.authorName {
-  font-weight: 300;
-  font-size: 20px;
 }
 
 .year {
   margin-left: 10px;
   color: $disabledColor;
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1 0 auto;
+  height: 55px;
 }
 
 .mbLink {
@@ -73,4 +86,11 @@
   overflow: hidden;
   margin-top: 20px;
   text-align: justify;
+}
+
+@media only screen and (max-width: $breakpointMedium) {
+  .titleRow {
+    justify-content: space-between;
+    overflow: hidden;
+  }
 }
